# Movie-Recommender

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  main.cpp  movie.cpp  movie.h  movieRec  movieRec1  movieRecommender  runAllTests
data/: movies.csv
header/: DBFilter.h  DBManager.h  FrontUI.h  SortBy.h  loginAuth.h  movie.h  recMovies.h
lib/: login.txt
src/: DBFilter.cpp  DBManager.cpp  DBManger.cpp  FrontUI.cpp  SortBy.cpp  loginAuth.cpp  movie.cpp  recMovies.cpp
tests/: test.cpp  testDbFilter.cpp
